Stretched link zindex fix

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -5473,7 +5473,7 @@ textarea.form-control-lg {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
   padding: 1.25rem 1rem;
 }
 
@@ -7725,7 +7725,7 @@ textarea.form-control-lg {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   content: "";
 }
 
