--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -1171,7 +1171,7 @@ progress {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   content: "";
 }
 
